# squeez

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.sh  install.sh  uninstall.sh
.github/: pull_request_template.md
.github/scripts/: generate-changelog.sh  update-readme-benchmarks.sh
.github/workflows/: auto-release.yml  ci.yml  cleanup-branches.yml  no-claude-trailer.yml  pr-checks.yml  promote-develop.yml  promote-to-main.yml  release.yml
assets/: persona_full.md  persona_full_pt_br.md  persona_lite.md  persona_ultra.md  persona_ultra_pt_br.md
bench/: bench_i18n.rs  report.md  run.sh  run_context.sh
bench/fixtures/: cat_claude_md.txt  context_crosscall_3.txt  en_prose.txt  intensity_budget80.txt  mdcompress_claude_md.txt  mdcompress_prose.txt  pt_br_prose.txt  summarize_huge.txt  xcodebuild_build.txt
hooks/: codex-posttooluse.sh  codex-pretooluse.sh  codex-session-start.sh  copilot-posttooluse.sh  copilot-pretooluse.sh  copilot-session-start.sh  pi-extension.ts  postcompact.sh  posttooluse.sh  precompact.sh  pretooluse.sh  session-start.sh  statusline.sh  subagent-stop.sh
npm/: .npmignore  CHANGELOG.md  bin.js  install.js  package.json
opencode-plugin/: squeez.js
scripts/: statusline.sh
src/: config.rs  filter.rs  json_util.rs  lib.rs  main.rs  memory.rs  session.rs
src/commands/: benchmark.rs  build.rs  cloud.rs  compress_md.rs  compress_output.rs  compress_prompt.rs  data_tool.rs  database.rs  docker.rs  filter_stdin.rs  fs.rs  generic.rs  git.rs  init.rs  mcp_server.rs  mod.rs  network.rs  next_build.rs  package_mgr.rs  persona.rs  (+12 more)
tests/: test_agent_compress_output.rs  test_benchmark_hypothesis.rs  test_build.rs  test_cache_stability.rs  test_cloud.rs  test_compress_md.rs  test_compress_output.rs  test_compress_prompt.rs  test_config.rs  test_config_tunables.rs  test_context_cache.rs  test_database.rs  test_dedup.rs  test_dispatch_cloudflare.rs  test_efficiency_proof.rs  test_filter_dispatch.rs  test_fs.rs  test_grouping.rs  test_handler_stats.rs  test_hosts_claude_code.rs  test_hosts_codex.rs  test_hosts_opencode.rs  test_hosts_pi.rs  test_hosts_registry.rs  test_init.rs  test_intensity.rs  test_json_util.rs  test_mcp_server.rs  test_memory.rs  test_memory_file_warn.rs  test_memory_fixes.rs  test_memory_structured.rs  test_network.rs  test_next_build.rs  test_nudge.rs  test_package_mgr.rs  test_persona.rs  test_plan_mode.rs  test_playwright.rs  test_redundancy.rs  (+13 more)
(+30 files in other folders)
