[package]
name = "squeez"
version = "0.2.0"
edition = "2021"
description = "End-to-end token optimizer for Claude Code, Copilot CLI, and OpenCode. Compresses bash output up to 95%, collapses redundant calls, injects caveman persona, and compresses memory files. Zero new dependencies."
repository = "https://github.com/claudioemmanuel/squeez"
license = "MIT"
keywords = ["claude-code", "token", "compression", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "squeez"
path = "src/main.rs"

[lib]
name = "squeez"
path = "src/lib.rs"

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
strip = true
lto = true
